# jp-diet-search

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  since2024.csv
.github/workflows/: docs.yml  pypi.yml
docs/: Makefile
docs/source/: changelog.rst  cli.rst  conf.py  development.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: index.rst
src/jp_diet_search/: __init__.py  cli.py  client.py  core.py  endpoints.py  exceptions.py  models.py  queries.py
tests/: test_core_request_json.py  test_errors_propagate.py  test_imports.py
