[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jp-diet-search"
version = "0.1.0"
description = "Python client & CLI for the National Diet Library Minutes Search API (国会会議録検索システム)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Eiichi Yamamoto" }
]
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://kokkai.ndl.go.jp/"
Source = "https://example.com/your/repo"

[project.scripts]
jp-diet-search = "jp_diet_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
