[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jp-diet-search"
version = "0.1.0"
description = "Python client & CLI for the National Diet Library Minutes Search API (国会会議録検索システム)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Eiichi Yamamoto", email = "info@yeiichi.com" }
]
keywords = [
  "Japan",
  "Diet",
  "Kokkai",
  "National Diet Library",
  "minutes",
  "parliament",
  "API",
  "search",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://kokkai.ndl.go.jp/"
Source = "https://github.com/yeiichi/jp-diet-search"

[project.scripts]
jp-diet-search = "jp_diet_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
